--- a/index.html
+++ b/index.html
@@ -12,8 +12,18 @@
 <body>
     <div class="fixed text-white ml-2 mt-2 select-none "><span>Score: </span> <span id='scoreEl'>0</span></div>
 
+    
+    <div id="main-ui" class="fixed inset-0 flex items-center justify-center  ">
+        <div class="bg-white max-w-md w-full p-6 text-center ">
+            <h1 id='score-ui' class="text-4xl font-bold leading-none ">0</h1>
+            <p class="text-sm text-gray-700 mb-4 ">Points</p>
+            <div>
+                <button id='startBtn' class="bg-blue-500 text-white w-full py-3 rounded-full text-sm">Start Game</button>
+            </div>
+        </div>
+    </div>
+    
     <canvas id="canvas1"></canvas>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js" integrity="sha512-1dalHDkG9EtcOmCnoCjiwQ/HEB5SDNqw8d4G2MKoNwjiwMNeBAkudsBCmSlMnXdsH8Bm0mOd3tl/6nL5y0bMaQ==" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
